@@ -12,7 +12,6 @@ import java.util.List;
 import java.util.function.BiFunction;
 import java.util.function.Function;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
 
@@ -50,7 +49,7 @@ import static org.mockito.Mockito.when;
 public abstract class AbstractCodecTest {
 
     public static List<? extends Class<?>> messageClasses(List<Object> messages) {
-        return messages.stream().map(Object::getClass).collect(Collectors.toList());
+        return messages.stream().map(Object::getClass).toList();
     }
 
     public static Stream<Short> requestApiVersions() {
@@ -188,7 +187,7 @@ public abstract class AbstractCodecTest {
 
         ApiMessage encodedBody = bodySupplier.get();
 
-        short headerVersion = headerVersionSupplier.apply(apiVersion); // ;
+        short headerVersion = headerVersionSupplier.apply(apiVersion);
         ByteBuffer akBuffer = serializeUsingKafkaApis(headerVersion, encodedHeader, apiVersion, encodedBody);
 
         // This is a bit of a hack... the Data classes know about which fields appear in which versions
@@ -223,8 +222,7 @@ public abstract class AbstractCodecTest {
                                                                                            Supplier<B> bodySupplier,
                                                                                            KafkaMessageDecoder decoder,
                                                                                            Class<? extends Frame> frameClass,
-                                                                                           boolean expectedHasResponse)
-            throws Exception {
+                                                                                           boolean expectedHasResponse) {
 
         var encodedHeader = headerSupplier.apply(apiVersion);
 
